# collective-gain

./: CONVERSATIONS  NEXT  README  TODO
Ma/: README.md
Ma/cgain/: asexual.py  radii.py
Mb/: .gitignore  INVASION.md  Makefile  README  TODO  collective-gain.cc  init-alt.cc  make_data  random.h
Mc/: Makefile  README  a  asim.cc  e.cc  init-alt.cc  paper.1a.tex  random.cc  random.h  times.init-alt  times.scheme
Mc/clojure/cgain/: CHANGELOG.md
Mc/m/: a.m  acorn.m  apply_delta.m  cg.m  disp_g.m  disp_g_matrix.m  find_unoccupied.m  iif.m  organism_grid.m
Mc/m/old/: ps.m
Mc/scheme/: deadcode.ss  eqns-eric-holk.ss  profile.ss  sim.ss  x.ss
Mc/x/: params.cc
Md/: example_carriers.py  example_invasion.py  example_noncarriers.py  main.py  parametersweep.py  pyproject.toml  simulation.py  visualize.py
goldstd/: pyproject.toml
goldstd/cgain/: asexual.py
init-alt/: .Makefile.swp  .README.swp  Makefile  a.cc  b.cc  c.cc  d.cc  e  init-alt.cc  init-alt.d  output.xml  paper.1a.tex  random.d  run.py  steps  tags  test-params  test-params.cc  val.out
init-alt/clojure/cgain/: README.md  project.clj
init-alt/haskell/: Main.hs
init-alt/m/: acorn.m  cg.m  disp_matrix.m  in_bounds.m  in_bounds_indices.m  make_delta.m  multiply_delta.m  run
init-alt/m/old/: apply_delta.m  make_delta_matrix.m
init-alt/scheme/: .nfs0000000003dc20310000138a  eqns.ss  sim.ss
init-alt/x/: out.xml  params.in
init-alt2/: .gitignore  Makefile  README  collective-gain-fecundity.cc  collective-gain.cc  init-alt.cc  random.cc  random.h  randomwalk.py  x-getopt.cc  x-ut.cc
(+6 files in other folders)
