[tool.poetry]
name = "cgain-md"
version = "0.1.0"
description = "A stochastic model of collective gain"
authors = ["Zoltan A. Kocsis <11808286+zaklogician@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cgain_md"}]

[tool.poetry.dependencies]
python = "^3.9"
uniplot = "^0.16.2"
mypy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
